openshift/openshiftstack/application/kfserving/overlays/servicemesh/network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-to-kfserving
  namespace: kubeflow
spec:
  podSelector:
    matchLabels:
      app: 'kfserving'
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
